Fix our-values icon alignment for compatibility with firefox browser

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -518,17 +518,19 @@ address strong,
 }
 
 .value-icon img {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   width: 90px;
   height: 90px;
-  margin: 30px 10px 20px;
 }
 
 .value-icon {
   height: 100px;
-  justify-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+      justify-content: center;
+      margin: 20px 10px;
 }
 
 .value-text {
